# vulkan-rust-game-engine

./: .gitignore  Cargo.toml  README.md  compile-shaders.sh
crates/sample/: Cargo.toml
crates/sample/src/: main.rs
vulkan-rust/: Cargo.toml  compile-shaders.sh  vk_layer_settings.txt
vulkan-rust/shaders/depth_and_motion/: shader.frag  shader.vert
vulkan-rust/shaders/depth_and_motion_marble_instanced/: shader.frag  shader.vert
vulkan-rust/shaders/depth_and_motion_standard/: shader.vert
vulkan-rust/shaders/marble_instanced/: shader.frag  shader.vert
vulkan-rust/shaders/motion_blur/: shader.frag
vulkan-rust/shaders/simple/: shader.frag  shader.vert
vulkan-rust/shaders/simple_no_tex/: shader.frag  shader.vert
vulkan-rust/shaders/standard/: shader.frag  shader.vert
vulkan-rust/src/: app.rs  app_data.rs  builder.rs  main.rs
vulkan-rust/src/bootstrap/: bootstrap_command_buffer_loader.rs  bootstrap_depth_buffer_loader.rs  bootstrap_descriptor_sets_loader.rs  bootstrap_framebuffer_loader.rs  bootstrap_loader.rs  bootstrap_pipeline_loader.rs  bootstrap_render_images_loader.rs  bootstrap_swapchain_loader.rs  bootstrap_sync_objects_loader.rs  bootstrap_texture_sampling_loader.rs  bootstrap_uniform_loader.rs  bootstrap_validation_loader.rs  mod.rs  queue_family_indices.rs
vulkan-rust/src/buffer/: buffer.rs  image2d.rs  into_buffer_data.rs  mod.rs  model.rs  single_frame_render_info.rs  single_model_render_info.rs
vulkan-rust/src/game/: camera.rs  game_object.rs  has_camera_matrix.rs  mod.rs  scene.rs  transform.rs
vulkan-rust/src/resources/: image2d.rs  (+3 more)
(+181 files in other folders)
