[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }
winit = "0.24"
ctrlc = { version = "3.2", features = ["termination"] }
